api/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 1                      # кількість екземплярів Pod, що буде створено цим Deployment
  selector:
    matchLabels:
      app: api                # селектор по якому Deployment зв'язаний з Pod
  template:
    metadata:
     labels:
       app: api               # мітка Pod по якому вона буде зв'язана з Deployment та Service
    spec:
      containers:
        - image: cfif2001/api:0.3       # образ Docker
          name: api           # ім'я контейнеру
          ports:
            - containerPort: 8080
