api/virtual-service.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: api-virtual
spec:
  hosts:
    - api-service # ім'я Service до якого застосовується налаштування
  http:
    - route:
        - destination:
            host: api-service # ім'я Service до якого застосовується налаштування
      timeout: 5s
      retries:
        attempts: 3
        retryOn: 5xx
        perTryTimeout: 5s
